--- a/index.html
+++ b/index.html
@@ -1,63 +1,68 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Sample Resume</title>
+<meta charset="utf-8">
+<title>My Website</title>
+<link  rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Sacramento&display=swap" rel="stylesheet"
 </head>
-<body>
 
-<table >
-<tr>
-<td><img src="https://media.licdn.com/dms/image/D5635AQF9_K_YDGG62Q/profile-framedphoto-shrink_200_200/0/1668432680127?e=1671980400&v=beta&t=WLJEvZBB7HN_eqvyesHJ8JzWet1N4fK3xJ2my48v73A" alt="Its a pic"></td>
-<td><h3>Mohammad Moin</h3><p><strong><em>Full Stack Web Developer</em></strong></p><p>Mobile No:+91-9440581778</p><p>Email:moinmohammad0307@gmail.com</p><p>Last updated:<input type="date"></p></td>
-</tr>
-</table>
+<body class="bdy">
 
-<h4><strong><em>Experience:</em></strong></h4>
-
-<p><strong>TCS:</strong></p>
-<p> Having 2 years experience on developing websites </p>
-<list>
-<ol>
-	<li><p><strong>Technologies used:</strong></p></li>
-		<list>
-		<ul>
-		<li>HTML 5</li>
-		<li>CSS 3</li>
-		<li>BOOTSTRAP 4</li>
-		<li>JAVASCRIPT ES6</li>
-		<li>DOCUMENT OBJECT MODEL(DOM)</li>
-		<li>JQUERY</li>
-		<li>THE UNIX COMMAND LINE</li>
-		<li>GIT HUB AND VERSION CONTROL</li>
-		<li>NODE.JS</li>
-		<li>EXPRESS.JS</li>
-		<li>APPLICATION PROGRAM INTERFACES(APIS)</li>
-		<li>EJS</i>
-		<li>DATABASE FUNDAMENTALS</li>
-		<li>SQL DATABASES</li>
-		<li>NOSQL DATABASES WITH MONGODB AND MONGOOSE</li>
-		</ul>
-		</list>
-	<li><p><strong>Hands on:</strong></p></li>
-		<list>
-		<ul>
-		<li>Hosting static websites with GitHub Pages.</li>
-		<li>Deploying server based applications with Heroku.</li>
-		<li>Deploying Databases with Mongo Atlas.</li>
-		<li>Understand REST and guiding principles behind API design.</li>
-		<li>Learn to work with a MongoDB GUI Robo 3T</li>
-		<li>Implementing GET, POST, PUT, PATCH and DELETE by creating a public API from scratch.</li>
-		<li>Understand and use chained route handlers from Express.</li>
+<div class="top-cont">
+<img class="top-cloud" src="cloud.png" style="margin-left:200px;">
+<h1 class="name">I'm Moin</h1>
+<p class="para">A <span><em>Pro</em></span>grammer</p>
+<img class="bottom-cloud" src="cloud.png" style="margin-bottom:400px;">
+<img class="mountain" src="mountain.png" >
+</div>
+<div>
 
 
 
-</ol>
-</list>
 
-To check my sample website <a href="https://www.google.co.in">Click here</a><br><br>
+<div class="middle-container">
+  <div class="profile">
+    <img class="img" src="https://media.licdn.com/dms/image/D5635AQF9_K_YDGG62Q/profile-framedphoto-shrink_200_200/0/1668432680127?e=1671980400&v=beta&t=WLJEvZBB7HN_eqvyesHJ8JzWet1N4fK3xJ2my48v73A" alt="Its imag">
+
+    <h2>Hello.</h2>
+    <p class="intro" >Iam a Web Developer and my hobby is to build websites.</p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="com" src="computer.png" alt="its img"  >
+      <h3>HTML and CSS</h3>
+      <p class="ht">As you can see this site has been developed using HTML and CSS which Iam good at.</p>
+    </div>
+    <div class="skill-row">
+      <img class="chillies" src="chillies.png" alt="its img" >
+      <h3>Challenge</h3>
+      <p class="challenge">I have completed multiple callenges on udemy course of "The Complete 2023 Web Development Bootcamp"</p>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>If you like my website design.</h3>
+    <p>Loved the site? Then get connected with me to have a discussion on it.</p>
+    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+  </div>
+</div>
 
 
-Hyperlink for my personal details: <a href="personal_details.html">Click here to know my personal details</a>
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/in/mohammad-moin-69111b226/">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/mohammadmoin11">Twitter</a>
+  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <p>© Moin Mohammad.</p>
+</div>
 
+
+
+</div>
 </body>
-
 </html>
